# codex-pr-pilot

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codex-review.yml
codex_pilot/: __init__.py  cli.py  diff.py  github_client.py  openai_client.py  review.py
examples/: sample-review.md  sample.diff
tests/: test_diff.py  test_github_client.py  test_openai_client.py  test_review.py
