[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-pr-pilot"
version = "0.1.0"
description = "Lightweight GitHub Actions assistant for AI-generated PR summaries, risk notes, and test suggestions."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "galaxypopnblm-commits" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/galaxypopnblm-commits/codex-pr-pilot"
Issues = "https://github.com/galaxypopnblm-commits/codex-pr-pilot/issues"

[project.scripts]
codex-pilot = "codex_pilot.cli:main"

[tool.setuptools.packages.find]
include = ["codex_pilot*"]
